--- a/src/main/resources/ifpr/pgua/eic/exemplo/visualizar.fxml
+++ b/src/main/resources/ifpr/pgua/eic/exemplo/visualizar.fxml
@@ -10,7 +10,7 @@
 
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ifpr.pgua.eic.exemplo.controllers.TelaVisualizar">
    <children>
-      <ListView fx:id="lvVeiculos" prefHeight="200.0" prefWidth="200.0" />
+      <ListView fx:id="lvVeiculos" onMouseClicked="#mostrarDetalhes" prefHeight="200.0" prefWidth="200.0" />
       <VBox alignment="CENTER" prefHeight="400.0" prefWidth="225.0">
          <children>
             <TextArea fx:id="taDetalhes" prefHeight="215.0" prefWidth="100.0" />
